Try using sysroot_linux-64

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,7 +10,7 @@ source:
   sha256: 53d11ebd2972fc452af168a00eb83aefb61387662c10784e81b63e44aa575de4
 
 build:
-  number: 0
+  number: 1
   skip: true  # [not linux]
 
 requirements:
@@ -25,6 +25,7 @@ requirements:
     - jpeg
     - libtiff
     - zlib
+    - sysroot_linux-64
   run:
     - boost-cpp
 
