--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,8 +10,8 @@ source:
   sha256: 53d11ebd2972fc452af168a00eb83aefb61387662c10784e81b63e44aa575de4
 
 build:
-  number: 3
-  skip: true  # [not linux]
+  number: 4
+  skip: true  # [win]
 
 requirements:
   build:
